Prevent img download on mobile

--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -124,12 +124,13 @@ a {
 }
 
 img {
-    user-select: none;
+    -webkit-user-modify: none;
     -webkit-user-drag: none;
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    pointer-events: none;
 }
 
 .page-content {
